--- a/counts.ipynb
+++ b/counts.ipynb
@@ -17,6 +17,7 @@
     }
    ],
    "source": [
+    "\n",
     "\"\"\"----------------------------------Below is draft work for the function ------------------------------------------------\"\"\"\n",
     "\n",
     "\"\"\"October 5th, 2020: Write a Python function called counts that takes a list as input\n",
@@ -111,6 +112,88 @@
     "print(\"Dictionary sorted by keys from list, count of each letter in list\", Dict)\n",
     "\n",
     "\"\"\"----------------------------------Above is draft work for the function-------------------------------------------------\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a list elements separated by COMMA l,l,z,a\n",
+      "l,l,z,a\n",
+      "user list is  ['l', 'l', 'z', 'a']\n",
+      "The sorted list is: ['a', 'l', 'l', 'z']\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'userList' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-9a4daedb16e2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     75\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     76\u001b[0m \u001b[0minput_string\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Enter a list elements separated by COMMA \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 77\u001b[1;33m \u001b[0mcounts\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput_string\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     78\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-2-9a4daedb16e2>\u001b[0m in \u001b[0;36mcounts\u001b[1;34m(input_string)\u001b[0m\n\u001b[0;32m     67\u001b[0m     \u001b[1;34m\"\"\"https://www.geeksforgeeks.org/add-a-keyvalue-pair-to-dictionary-in-python/\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     68\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mletter\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mmy_sorted_dictionary_keys\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 69\u001b[1;33m         \u001b[0mDict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mletter\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcount_letters\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mletter\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     70\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     71\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-2-9a4daedb16e2>\u001b[0m in \u001b[0;36mcount_letters\u001b[1;34m(my_letter)\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mcount\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0muserList\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mmy_letter\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m             \u001b[0mcount\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcount\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'userList' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"------Consolidating work above into less functions, with aim to create a single function called Counts ---------------\"\"\"\n",
+    "def count_letters(my_letter,userList):\n",
+    "    count = 0\n",
+    "\n",
+    "    for i in userList:\n",
+    "        if i == my_letter:\n",
+    "            count = count + 1\n",
+    "\n",
+    "        else:\n",
+    "            continue\n",
+    "\n",
+    "    return (count)\n",
+    "\n",
+    "    \n",
+    "def bubble_sort(array):\n",
+    "    n = len(array)\n",
+    "\n",
+    "    for i in range(n):\n",
+    "        already_sorted = True\n",
+    "\n",
+    "        for j in range(n - i - 1):\n",
+    "            if array[j] > array[j + 1]:\n",
+    "                array[j], array[j + 1] = array[j + 1], array[j]\n",
+    "                already_sorted = False\n",
+    "        if already_sorted:\n",
+    "            break\n",
+    "    return array\n",
+    "\n",
+    "\n",
+    "def counts(input_string): #the function takes a list of inputs separated by commas\n",
+    "\n",
+    "    Dict = {} #Creating dictionary in the counts function for final out put\n",
+    "    userList = input_string.split(\",\")\n",
+    "\n",
+    "    str = userList\n",
+    "    my_sorted_dictionary_keys = bubble_sort(str) #calls the User list and applies the bubble_sort function to sort it\n",
+    "\n",
+    "    print(my_sorted_dictionary_keys)\n",
+    "    \n",
+    "    for letter in my_sorted_dictionary_keys:\n",
+    "        Dict[letter] = count_letters(letter,userList) #pass two arguments to the count_letters function, so it can compare letter to list\n",
+    "\n",
+    "\n",
+    "    print(\"Dictionary sorted by keys from list, count of each letter in list\", Dict)\n",
+    "\n",
+    "\n",
+    "\n",
+    "input_string = input(\"Enter a list elements separated by COMMA \") #TAKE USER INPUT\n",
+    "counts(input_string) #CALL THE COUNTS FUNCTIONS\n",
+    "\n"
    ]
   },
   {
