Updated Jupyter Notebook counts file with work from Counts6.py where I created counts as nested functions

--- a/counts.ipynb
+++ b/counts.ipynb
@@ -198,6 +198,95 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a list elements separated by COMMA a,b,c,e,f,r,g,k,h,h,h\n",
+      "['a', 'b', 'c', 'e', 'f', 'g', 'h', 'h', 'h', 'k', 'r']\n",
+      "Dictionary sorted by keys from list, count of each letter in list {'a': 1, 'b': 1, 'c': 1, 'e': 1, 'f': 1, 'g': 1, 'h': 3, 'k': 1, 'r': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"------Using system of nesting functions to create Counts as overarching function, drafted in Counts6.py --------------\"\"\"\n",
+    "\n",
+    "def counts(input_string): #Have created nested functions within counts\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    def count_letters(my_letter,userList):\n",
+    "        count = 0\n",
+    "\n",
+    "        for i in userList:\n",
+    "            if i == my_letter:\n",
+    "                count = count + 1\n",
+    "\n",
+    "            else:\n",
+    "                continue\n",
+    "\n",
+    "        return (count)\n",
+    "\n",
+    "        \n",
+    "    def bubble_sort(array):\n",
+    "        n = len(array)\n",
+    "\n",
+    "        for i in range(n):\n",
+    "            # Create a flag that will allow the function to\n",
+    "            # terminate early if there's nothing left to sort\n",
+    "            already_sorted = True\n",
+    "\n",
+    "            # Start looking at each item of the list one by one,\n",
+    "            # comparing it with its adjacent value. With each\n",
+    "            # iteration, the portion of the array that you look at\n",
+    "            # shrinks because the remaining items have already been\n",
+    "            # sorted.\n",
+    "            for j in range(n - i - 1):\n",
+    "                if array[j] > array[j + 1]:\n",
+    "                    # If the item you're looking at is greater than its\n",
+    "                    # adjacent value, then swap them\n",
+    "                    array[j], array[j + 1] = array[j + 1], array[j]\n",
+    "\n",
+    "                    # Since you had to swap two elements,\n",
+    "                    # set the `already_sorted` flag to `False` so the\n",
+    "                    # algorithm doesn't finish prematurely\n",
+    "                    already_sorted = False\n",
+    "\n",
+    "            # If there were no swaps during the last iteration,\n",
+    "            # the array is already sorted, and you can terminate\n",
+    "            if already_sorted:\n",
+    "                break\n",
+    "\n",
+    "        return array\n",
+    "\n",
+    "\n",
+    "    def counts_part1(input_string): #the function takes a list of inputs separated by commas\n",
+    "\n",
+    "        Dict = {} #Creating dictionary in the counts function for final out put\n",
+    "        userList = input_string.split(\",\")\n",
+    "\n",
+    "        str = userList\n",
+    "        my_sorted_dictionary_keys = bubble_sort(str) #calls the User list and applies the bubble_sort function to sort it\n",
+    "\n",
+    "        print(my_sorted_dictionary_keys)\n",
+    "        \n",
+    "        for letter in my_sorted_dictionary_keys:\n",
+    "            Dict[letter] = count_letters(letter,userList) #pass two arguments to the count letters function\n",
+    "\n",
+    "\n",
+    "        print(\"Dictionary sorted by keys from list, count of each letter in list\", Dict)\n",
+    "\n",
+    "    counts_part1(input_string)\n",
+    "\n",
+    "input_string = input(\"Enter a list elements separated by COMMA \")\n",
+    "counts(input_string)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
