Updating All_Tasks.ipynb with earlier notes

--- a/All_Tasks.ipynb
+++ b/All_Tasks.ipynb
@@ -15,6 +15,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 1 - draft the solution\n",
+    "See code below:<br>\n",
+    "I was actually able to draft a code solution to this problem very quickly.<br>\n",
+    "The challenge was to do it without depending on any module from the standard library.<br>\n",
+    "My code below depended on the count and sorted functions.<br>\n",
+    "It also wasn't coded as a single function.<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a list elements separated by COMMA a,b,b,z,a\n",
+      "user list is  ['a', 'b', 'b', 'z', 'a']\n",
+      "The sorted list is: ['a', 'a', 'b', 'b', 'z']\n",
+      "Dictionary sorted by keys from list, count of each letter in list {'a': 2, 'b': 2, 'z': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creating an empty Dictionary\n",
+    "\"\"\"https://www.geeksforgeeks.org/python-dictionary/#:~:text=Creating%20a%20Dictionary,element%20being%20its%20Key%3Avalue%20.\"\"\"\n",
+    "Dict = {} \n",
+    "\n",
+    "#Python 3 program to sort letters of string alphabetically\n",
+    "def sortList(myList):\n",
+    "    a_sorted_list = sorted(userList)\n",
+    "    return a_sorted_list\n",
+    "\n",
+    "\n",
+    "#takes a list of inputs separated by commas\n",
+    "\"https://pynative.com/python-accept-list-input-from-user/\"\n",
+    "input_string = input(\"Enter a list elements separated by COMMA \")\n",
+    "userList = input_string.split(\",\")\n",
+    "print(\"user list is \", userList)\n",
+    "\n",
+    "\n",
+    "#calls the User list and applies function to sort it\n",
+    "str = userList\n",
+    "print(\"The sorted list is:\", sortList(str))\n",
+    "\n",
+    "my_sorted_dictionary_keys = sortList(str)\n",
+    "\n",
+    "\n",
+    "\n",
+    "#add key value pairs to dictionary\n",
+    "#call function count_letters\n",
+    "\"\"\"https://www.geeksforgeeks.org/add-a-keyvalue-pair-to-dictionary-in-python/\"\"\"\n",
+    "for letter in my_sorted_dictionary_keys:\n",
+    "    Dict[letter] = my_sorted_dictionary_keys.count(letter)\n",
+    "\n",
+    "\n",
+    "print(\"Dictionary sorted by keys from list, count of each letter in list\", Dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 2 - Make the solution work without functions from the standard library\n",
+    "\n",
+    "With some googling around I was able to replace the count and sorted functions.<br>\n",
+    "\n",
+    "I used the Bubble Sort from this website \"\"\"https://realpython.com/sorting-algorithms-python/\"\"\"<br>\n",
+    "I used the Count method from this website \"\"\"https://stackoverflow.com/questions/28966495/python-counting-letters-in-string-without-count-function\"\"\"\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -131,6 +208,15 @@
     "print(\"Dictionary sorted by keys from list, count of each letter in list\", Dict)\n",
     "\n",
     "\"\"\"----------------------------------Above is draft work for the function-------------------------------------------------\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 3 - Write a Python function\n",
+    "\n",
+    "As the task asked to write a Python function, technically speaking all of the functionality of this task should be available in a single function. I achieved this by researching how to do nested functions in python, to create Counts as the overarching function."
    ]
   },
   {
@@ -3754,6 +3840,14 @@
    "metadata": {},
    "source": [
     "### Select an appropriate plot to depict the resulting list of 1,000 numbers, showing that it roughly follows a bell-shaped curve. You should explain your work in a Markdown cell above the code."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I chose a bar plot to show that the resulting numbers roughly follow a bell-shaped curve.<br>\n",
+    "Bar plots are ideal for keeping tallies of counts, whereas other graph types which measure in a single line which could have also shown a bell shape are often used for linear tracking of time."
    ]
   },
   {
