worked on task 4, Simpson's Paradox

--- a/All_Tasks.ipynb
+++ b/All_Tasks.ipynb
@@ -3888,6 +3888,243 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TASK 4 - Simpson's Paradox\n",
+    "\n",
+    "4. November 30th, 2020: Simpson’s paradox is a well-known statistical paradox\n",
+    "where a trend evident in a number of groups reverses when the groups are combined\n",
+    "into one big data set. Use numpy to create four data sets, each with an x array\n",
+    "and a corresponding y array, to demonstrate Simpson’s paradox. You might\n",
+    "create your x arrays using numpy.linspace and create the y array for each\n",
+    "x using notation like y = a * x + b where you choose the a and b for each\n",
+    "x , y pair to demonstrate the paradox. You might see the Wikipedia page for\n",
+    "Simpson’s paradox for inspiration.\n",
+    "\n",
+    "\n",
+    "### I found very simple explanation of Simpson's Paradox on the video below\n",
+    "[![SimpsonsParadox.png](SimpsonsParadox.png)](https://youtu.be/wgLUDw8eLB4 \"Simpsons Paradox\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You might see the Wikipedia page for Simpson’s paradox for inspiration.\n",
+    "\n",
+    "[![WikipediaKidneyStoneTreatment.png](WikipediaKidneyStoneTreatment.png)](https://en.wikipedia.org/wiki/Simpson%27s_paradox \"Simpsons Paradox\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Demonstrating Simpson's Paradox And Kidney stone treatment without NumPy Linspace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ANALYSING TREATMENT A\n",
+      "Small stones Treatment A 93% [81, 87]\n",
+      "Large stones Treatment A 73% [192, 263]\n",
+      "\n",
+      "ANALYSING TREATMENT B\n",
+      "Small stones Treatment B 87% [81, 87]\n",
+      "Large stones Treatment B 69% [192, 263]\n",
+      "\n",
+      "RESULT WHEN THE GROUPS ARE COMBINED INTO ONE BIG DATA SET\n",
+      "Treatment B is the most effective treament 83% [289, 350]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Manually create a list in Python that represents Treatement A on Group 1 and Group 3\n",
+    "A = [[81,87],\n",
+    "     [192,263]]\n",
+    "\n",
+    "# Manually create a list in Python that represents Treatement B on Group 2 and Group 4\n",
+    "B = [[234,270],\n",
+    "     [55,80]]\n",
+    "\n",
+    "A_Treatment_Of_Small_Stones = A[0] #isolate Group1 for A Treatment of Small Stones\n",
+    "A_Treatment_Of_Big_Stones = A[1] #isolate Group3 for A Treatment of Large Stones\n",
+    "\n",
+    "\n",
+    "Small_Stones_A_Percent = A[0][0] / A[0][1]\n",
+    "Large_Stones_A_Percent = A[1][0] / A[1][1]\n",
+    "\n",
+    "#use a formula to sum both the A lists to see overall totals for both groups treated by treatment A\n",
+    "# https://www.kite.com/python/answers/how-to-add-two-lists-element-wise-in-python\n",
+    "A_Treatment_Of_Both_Stones = [a + b for a, b in zip(A_Treatment_Of_Small_Stones, A_Treatment_Of_Big_Stones)] \n",
+    "Big_Stones_A_Percent = A_Treatment_Of_Both_Stones[0] / A_Treatment_Of_Both_Stones[1]\n",
+    "\n",
+    "\n",
+    "\n",
+    "B_Treatment_Of_Small_Stones = B[0] #isolate Group2 for B Treatment of Small Stones\n",
+    "B_Treatment_Of_Big_Stones = B[1] #isolate Group4 for B Treatment of Large Stones\n",
+    "\n",
+    "Small_Stones_B_Percent = B[0][0] / B[0][1]\n",
+    "Large_Stones_B_Percent = B[1][0] / B[1][1]\n",
+    "\n",
+    "B_Treatment_Of_Both_Stones = [a + b for a, b in zip(B_Treatment_Of_Small_Stones, B_Treatment_Of_Big_Stones)] \n",
+    "Big_Stones_B_Percent = B_Treatment_Of_Both_Stones[0] / B_Treatment_Of_Both_Stones[1]\n",
+    "\n",
+    "\n",
+    "print('ANALYSING TREATMENT A')\n",
+    "print('Small stones Treatment A {:.0%} {}'.format(Small_Stones_A_Percent,A[0]))\n",
+    "print('Large stones Treatment A {:.0%} {}'.format(Large_Stones_A_Percent,A[1]))\n",
+    "\n",
+    "\n",
+    "print('\\nANALYSING TREATMENT B')\n",
+    "print('Small stones Treatment B {:.0%} {}'.format(Small_Stones_B_Percent,A[0]))\n",
+    "print('Large stones Treatment B {:.0%} {}'.format(Large_Stones_B_Percent,A[1]))\n",
+    "\n",
+    "\n",
+    "print(\"\\nRESULT WHEN THE GROUPS ARE COMBINED INTO ONE BIG DATA SET\")\n",
+    "\n",
+    "if Big_Stones_A_Percent > Big_Stones_B_Percent:\n",
+    "    print('Treatment A is the most effective treament {:.0%} {}'.format(Big_Stones_A_Percent,A_Treatment_Of_Both_Stones))\n",
+    "else:\n",
+    "    print('Treatment B is the most effective treament {:.0%} {}'.format(Big_Stones_B_Percent,B_Treatment_Of_Both_Stones))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://stackoverflow.com/questions/32208359/is-there-a-multi-dimensional-version-of-arange-linspace-in-numpy\n",
+    "\n",
+    "This is just what you are looking for:\n",
+    "\n",
+    "matr = np.linspace((1,2),(10,20),10)\n",
+    "This means:\n",
+    "\n",
+    "For the first column; from 1 of (1,2) to 10 of (10,20), put the increasing 10 numbers.\n",
+    "\n",
+    "For the second column; from 2 of (1,2) to 20 of (10,20), put the incresing 10 numbers.\n",
+    "\n",
+    "And the result will be:\n",
+    "\n",
+    "[[ 1.  2.]\n",
+    " [ 2.  4.]\n",
+    " [ 3.  6.]\n",
+    " [ 4.  8.]\n",
+    " [ 5. 10.]\n",
+    " [ 6. 12.]\n",
+    " [ 7. 14.]\n",
+    " [ 8. 16.]\n",
+    " [ 9. 18.]\n",
+    " [10. 20.]]\n",
+    "\n",
+    "\n",
+    "You may also keep only one column's values increasing, for example, if you say that:\n",
+    "\n",
+    "matr = np.linspace((1,2),(1,20),10)\n",
+    "\n",
+    "The first column will be from 1 of (1,2) to 1 of (1,20) for 10 times which means that it will stay as 1 and the result will be:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.  2.]\n",
+      " [ 1.  4.]\n",
+      " [ 1.  6.]\n",
+      " [ 1.  8.]\n",
+      " [ 1. 10.]\n",
+      " [ 1. 12.]\n",
+      " [ 1. 14.]\n",
+      " [ 1. 16.]\n",
+      " [ 1. 18.]\n",
+      " [ 1. 20.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matr = np.linspace((1,2),(1,20),10)\n",
+    "print(matr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use numpy to create four data sets, each with an x array and a corresponding y array, to demonstrate Simpson’s paradox. You might create your x arrays using numpy.linspace and create the y array for each x using notation like y = a * x + b where you choose the a and b for each x , y pair to demonstrate the paradox. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 3.          5.33333333  7.66666667 10.        ]\n",
+      "56% 3.0 | 5.333333333333334\n",
+      "77% 8 | 10.0\n",
+      "70%\n",
+      "[16, 16, 16, 16]\n",
+      "100% 16 | 16\n",
+      "100% 16 | 16\n",
+      "100%\n"
+     ]
+    }
+   ],
+   "source": [
+    "avalue = 2\n",
+    "a = 3\n",
+    "b = 10\n",
+    "x = 2\n",
+    "y = b + x\n",
+    "\n",
+    "\n",
+    "x_array = np.linspace(a,b,num=4)\n",
+    "\n",
+    "y_array = []\n",
+    "\n",
+    "for item in x_array:\n",
+    "    item = a * x + b\n",
+    "    y_array.append(item)\n",
+    "\n",
+    "xpa= x_array[0] / x_array[1]\n",
+    "xpb= x_array[2] / x_array[3]\n",
+    "xpboth = (x_array[0]+x_array[2]) / (x_array[1]+x_array[3])\n",
+    "\n",
+    "ypa= y_array[0] / y_array[1]\n",
+    "ypb= y_array[2] / y_array[3]\n",
+    "ypboth = (y_array[0]+y_array[2]) / (y_array[1]+y_array[3])\n",
+    "\n",
+    "\n",
+    "print(x_array)\n",
+    "print('{:.0%} {} | {}'.format(xpa,round(x_array[0],2), x_array[1]))\n",
+    "print('{:.0%} {} | {}'.format(xpb,round(x_array[2]), x_array[3]))\n",
+    "print('{:.0%}'.format(xpboth))\n",
+    "\n",
+    "print(y_array)\n",
+    "print('{:.0%} {} | {}'.format(ypa,round(y_array[0],2), y_array[1]))\n",
+    "print('{:.0%} {} | {}'.format(ypb,round(y_array[2]), y_array[3]))\n",
+    "print('{:.0%}'.format(ypboth))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
